fix alignment and spacing bugs

--- a/src/components/FancyLink.scss
+++ b/src/components/FancyLink.scss
@@ -5,6 +5,8 @@
     align-items: center;
     word-break: break-word;
 
+    text-align: center;
+
     padding: 12px;
     border-radius: 2px;
     background: white;
