--- a/src/layout/Body.scss
+++ b/src/layout/Body.scss
@@ -134,7 +134,7 @@
 }
 
 // Large screens 4 per row
-@media only screen and (min-width: 768px) {
+@media only screen and (min-width: 1200px) {
     .ins-p-landing__content .ins-l-app-grid {
         &__item:nth-child(4n+1) { grid-column: 1; }
         &__item:nth-child(4n+2) { grid-column: 2; }
